--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             </div>
             <div class="flex-1 relative">
                 <div class="w-full h-[400px] bg-rinjani-sky rounded-xl-custom overflow-hidden shadow-2xl relative">
-                    <img src="https://images.unsplash.com/photo-1584515933487-779824d29309?auto=format&fit=crop&q=80&w=800" alt="Pemeriksaan Anak" class="w-full h-full object-cover opacity-90">
+                    <img src="https://sa1s3optim.patientpop.com/assets/images/provider/photos/2720518.png?auto=format&fit=crop&q=80&w=800" alt="Pemeriksaan Anak" class="w-full h-full object-cover opacity-90">
                     <div class="absolute bottom-6 left-6 bg-white p-4 rounded-2xl shadow-xl flex items-center gap-4 animate-bounce">
                         <div class="w-12 h-12 bg-yellow-100 rounded-full flex items-center justify-center text-yellow-600">
                             <i class="fas fa-smile"></i>
