--- a/index.html
+++ b/index.html
@@ -60,6 +60,21 @@
             100% { transform: translateY(0px); }
         }
 
+        /* Animasi Berdenyut (Pulse) */
+        @keyframes heart-pulse {
+            0% { transform: scale(1); }
+            15% { transform: scale(1.3); }
+            30% { transform: scale(1); }
+            45% { transform: scale(1.15); }
+            60% { transform: scale(1); }
+            100% { transform: scale(1); }
+        }
+
+        .animate-heart-pulse {
+            animation: heart-pulse 1.5s ease-in-out infinite;
+            display: inline-block;
+        }
+
         .testi-floating {
             animation: floating-soft 5s ease-in-out infinite;
         }
@@ -137,13 +152,15 @@
             <div class="flex-1 relative">
                 <div class="w-full h-[400px] bg-rinjani-sky rounded-xl-custom overflow-hidden shadow-2xl relative">
                     <img src="https://sa1s3optim.patientpop.com/assets/images/provider/photos/2720518.png" alt="Pemeriksaan Anak" class="w-full h-full object-cover opacity-95">
-                    <div class="absolute bottom-6 left-6 bg-white p-4 rounded-2xl shadow-xl flex items-center gap-4 animate-bounce">
-                        <div class="w-12 h-12 bg-yellow-100 rounded-full flex items-center justify-center text-yellow-600">
-                            <i class="fas fa-smile"></i>
+                    
+                    <!-- Floating Card dengan Animasi Pulse pada Ikon Heart -->
+                    <div class="absolute bottom-6 left-6 bg-white p-4 rounded-2xl shadow-xl flex items-center gap-4 hover-lift">
+                        <div class="w-12 h-12 bg-red-50 rounded-full flex items-center justify-center text-red-500">
+                            <i class="fas fa-heartbeat text-xl animate-heart-pulse"></i>
                         </div>
                         <div>
                             <p class="text-sm font-bold">1000+ Pasien Cilik</p>
-                            <p class="text-xs text-slate-500">Telah kami layani</p>
+                            <p class="text-xs text-slate-500">Pelayanan sepenuh hati</p>
                         </div>
                     </div>
                 </div>
@@ -151,7 +168,7 @@
         </div>
     </section>
 
-    <!-- ✨ AI Health Advice Section -->
+    <!-- AI Health Advice Section -->
     <section id="ai-advice" class="py-20 px-4 bg-teal-50/50">
         <div class="max-w-4xl mx-auto bg-white p-8 md:p-12 rounded-[2.5rem] shadow-xl border border-teal-100">
             <div class="text-center mb-8">
@@ -337,7 +354,6 @@
                 </button>
 
                 <div id="testiSlider" class="flex overflow-x-auto py-10 gap-8 hide-scrollbar snap-x snap-mandatory scroll-smooth px-4">
-                    <!-- Testimoni cards... -->
                     <div class="min-w-full md:min-w-[450px] snap-center testi-card testi-floating bg-white p-10 rounded-[2.5rem] shadow-xl shadow-slate-100 border border-slate-50 relative hover:border-rinjani-primary/30 transition-all">
                         <div class="absolute -top-6 left-10 w-12 h-12 bg-rinjani-primary rounded-2xl flex items-center justify-center text-white text-xl"><i class="fas fa-quote-left"></i></div>
                         <p class="text-slate-600 text-lg italic mb-8">"Dokter Rinjani sangat sabar menjelaskan kondisi anak saya. Ruang tunggunya juga nyaman sekali dan sangat kid-friendly."</p>
@@ -516,6 +532,7 @@
         const dots = dotsContainer.children;
 
         function updateSliderUI() {
+            if(cards.length === 0) return;
             const cardWidth = cards[0].offsetWidth + 32;
             const index = Math.round(slider.scrollLeft / cardWidth);
             Array.from(dots).forEach((dot, i) => {
