--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             </div>
             <div class="flex-1 relative">
                 <div class="w-full h-[400px] bg-rinjani-sky rounded-xl-custom overflow-hidden shadow-2xl relative">
-                    <img src="https://sa1s3optim.patientpop.com/assets/images/provider/photos/2720518.png" alt="Pemeriksaan Anak" class="w-full h-full object-cover opacity-95">
+                    <img src="https://images.unsplash.com/photo-1537368910025-700350fe46c7?auto=format&fit=crop&q=80&w=800" alt="Pemeriksaan Anak oleh Dokter" class="w-full h-full object-cover opacity-95">
                     
                     <!-- Floating Card dengan Animasi Pulse pada Ikon Heart -->
                     <div class="absolute bottom-6 left-6 bg-white p-4 rounded-2xl shadow-xl flex items-center gap-4 hover-lift">
@@ -456,7 +456,7 @@
                 name: "dr. Rinjani Kusuma, Sp.A",
                 spec: "Spesialis Anak",
                 bio: "Berpengalaman lebih dari 15 tahun dalam menangani kesehatan anak. Beliau dikenal sangat ramah dan ahli dalam menangani tumbuh kembang anak serta imunisasi.",
-                photo: "https://sa1s3optim.patientpop.com/assets/images/provider/photos/2720518.png",
+                photo: "https://images.unsplash.com/photo-1612349317150-e413f6a5b16d?auto=format&fit=crop&q=80&w=400",
                 edu: "Fakultas Kedokteran Universitas Indonesia (Spesialis Anak)",
                 skills: ["Imunisasi", "Tumbuh Kembang", "Gizi Anak", "Alergi"]
             },
@@ -464,7 +464,7 @@
                 name: "dr. Budi Santoso",
                 spec: "Dokter Umum",
                 bio: "Dokter keluarga yang berdedikasi tinggi dengan pendekatan holistik. Memiliki keahlian dalam diagnosa awal dan penanganan penyakit umum untuk segala usia.",
-                photo: "https://images.unsplash.com/photo-1612349317150-e413f6a5b16d?auto=format&fit=crop&q=80&w=400",
+                photo: "https://images.unsplash.com/photo-1537368910025-700350fe46c7?auto=format&fit=crop&q=80&w=400",
                 edu: "Fakultas Kedokteran Universitas Gadjah Mada",
                 skills: ["Cek Kesehatan Rutin", "Manajemen Diabetes", "Hipertensi"]
             },
